--- a/pattern/app/templates/registration.html
+++ b/pattern/app/templates/registration.html
@@ -15,7 +15,7 @@
 
     {% if good_message %}
         <p style="color: red;">{{ good_message }}</p>
-        <button method="get" type="submit" formaction="{% url 'user_page' %}" class="buttons-container">пЕрейти на свою
+        <button method="get" type="submit" formaction="{% url 'user_page' %}" class="buttons-container">Перейти на свою
             страницу?
         </button><br>
     {% endif %}
