--- a/pattern/templates/registration.html
+++ b/pattern/templates/registration.html
@@ -49,19 +49,29 @@
             color: #007bff;
             text-decoration: none;
         }
+        
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Логин</h2>
-        <form action="{% url 'login' %}" method="post">
+        <h2>Регистрация</h2>
+        <form action="{% url 'create_user' %}" method="post">
             {% csrf_token %}
-            <input type="username" name="Имя пользователя" placeholder="Имя пользователя" required>
-            <input type="password" name="Пароль" placeholder="Пароль" required>
-            <input type="submit" value="Войти">
+            <input type="username" name="username" placeholder="Имя пользователя" required>
+            <input type="password" name="password" placeholder="Пароль" required>
+            <input type="password" name="repeat_password" placeholder="Павторите пароль" required  {% if not valid %}class="error"{% endif %}>
+            <label for="role">Выберите вашу роль:</label>
+            <select type="password", name="role" id="role">
+                <option value="recruiter">Рекрутер</option>
+                <option value="employee">Наёмник</option>
+            </select>
+            {% if not valid %}
+                <p style="color: red;">{{ text }}</p>
+            {% endif %}
+            <input type="submit" value="Зарегестрироваться">
         </form>
-        <div class="registretion">
-            Еще нет аккаунта? <a href="{% url 'registration' %}">Зарегистрироваться</a>
+        <div class="register">
+            Есть аккаунт? <a href="{% url '' %}">Войти</a>
         </div>
     </div>
 </body>
